# lectara

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
crates/lectara-cli/: Cargo.toml
crates/lectara-cli/src/: main.rs
crates/lectara-service/: Cargo.toml  diesel.toml
crates/lectara-service/migrations/2025-07-01-000407_create_content_items/: down.sql
crates/lectara-service/migrations/2025-07-02-154114_add_unique_url_constraint/: down.sql  up.sql
crates/lectara-service/migrations/2025-07-07-004902_add_content_body/: down.sql  up.sql
crates/lectara-service/src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  shutdown.rs  validation.rs
crates/lectara-service/src/repositories/: content.rs  mod.rs  traits.rs
crates/lectara-service/src/routes/: mod.rs
crates/lectara-service/src/routes/api/: mod.rs  v1.rs
crates/lectara-service/src/routes/web/: mod.rs
crates/lectara-service/tests/: integration_tests.rs  prop_tests.proptest-regressions  prop_tests.rs  url_validation_tests.rs
crates/lectara-service/tests/api/: get_content.proptest-regressions  get_content.rs  mod.rs
crates/lectara-service/tests/api/content/get/: mod.rs  properties.proptest-regressions  properties.rs  simple.rs
crates/lectara-service/tests/api/content/post/: properties.rs  simple.rs
crates/lectara-service/tests/common/: mod.rs
data/: dev.db
examples/: test_client.rs
frontend/: README.md
migrations/2025-07-01-000407_create_content_items/: up.sql
nix/modules/: devshell.nix  nixos-modules.nix  nixos-tests.nix  nixpkgs.nix  pre-commit.nix  rust.nix  treefmt.nix
src/: lib.rs  main.rs  models.rs  test_helpers.rs
tests/: integration_tests.rs
