[package]
name = "lectara-cli"
description = "Command-line interface for Lectara content collection service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5"

[[bin]]
name = "lectara"
path = "src/main.rs"