[package]
name = "lectara-service"
description = "Lectara web service for collecting internet content"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
test-helpers = []

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
] }
diesel_migrations = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.98"
hyper = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.12.21", features = ["json"] }
tower = { version = "0.5.2", features = ["util"] }
