[package]
name = "lectara-service"
description = "Lectara web service for collecting internet content"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
test-helpers = []

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.11", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "chrono",
] }
diesel_migrations = "2.2.0"
http = "1.0"
http-body = "1.0"
pin-project = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["trace", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
anyhow = "1.0.98"
axum-test = "17.3.0"
bytes = "1.0"
http-body-util = "0.1"
hyper = { version = "1.6.0", features = ["full"] }
proptest = "1.7.0"
tower = { version = "0.5.2", features = ["util"] }
